force-app/main/default/objects/POE__x/POE__x.object-meta.xml
<CustomObject>
    <description>poe</description>
    <externalDataSource>Cosmos_DB</externalDataSource>
    <externalName>poe</externalName>
    <label>POE</label>
    <pluralLabel>Poe</pluralLabel>
</CustomObject>