force-app/main/default/objects/POE__x/fields/Behavior__c.field-meta.xml
<CustomField>
    <fullName>Behavior__c</fullName>
    <description>Behavior</description>
    <externalDeveloperName>Behavior</externalDeveloperName>
    <label>Behavior</label>
    <length>128</length>
    <type>Text</type>
</CustomField>