force-app/main/default/objects/POE__x/fields/CurrentDate__c.field-meta.xml
<CustomField>
    <fullName>CurrentDate__c</fullName>
    <description>CurrentDate</description>
    <externalDeveloperName>CurrentDate</externalDeveloperName>
    <label>CurrentDate</label>
    <length>128</length>
    <type>Text</type>
</CustomField>