force-app/main/default/objects/POE__x/fields/ExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>ExpiryDate__c</fullName>
    <description>ExpiryDate</description>
    <externalDeveloperName>ExpiryDate</externalDeveloperName>
    <label>ExpiryDate</label>
    <length>128</length>
    <type>Text</type>
</CustomField>