force-app/main/default/objects/POE__x/fields/IssuedDate__c.field-meta.xml
<CustomField>
    <fullName>IssuedDate__c</fullName>
    <description>IssuedDate</description>
    <externalDeveloperName>IssuedDate</externalDeveloperName>
    <label>IssuedDate</label>
    <length>128</length>
    <type>Text</type>
</CustomField>