force-app/main/default/objects/POE__x/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <description>Length</description>
    <externalDeveloperName>Length</externalDeveloperName>
    <label>Length</label>
    <length>128</length>
    <type>Text</type>
</CustomField>