force-app/main/default/objects/POE__x/fields/POENumber__c.field-meta.xml
<CustomField>
    <fullName>POENumber__c</fullName>
    <description>POENumber</description>
    <externalDeveloperName>POENumber</externalDeveloperName>
    <label>POENumber</label>
    <length>128</length>
    <type>Text</type>
</CustomField>