force-app/main/default/objects/POE__x/fields/POEType__c.field-meta.xml
<CustomField>
    <fullName>POEType__c</fullName>
    <description>POEType</description>
    <externalDeveloperName>POEType</externalDeveloperName>
    <label>POEType</label>
    <length>128</length>
    <type>Text</type>
</CustomField>