force-app/main/default/objects/POE__x/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <description>Property</description>
    <externalDeveloperName>Property</externalDeveloperName>
    <label>Property</label>
    <length>128</length>
    <type>Text</type>
</CustomField>