force-app/main/default/objects/POE__x/fields/SalesforceContactId__c.field-meta.xml
<CustomField>
    <fullName>SalesforceContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SalesforceContactId</description>
    <externalDeveloperName>SalesforceContactId</externalDeveloperName>
    <label>SalesforceContactId</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Poe</relationshipLabel>
    <relationshipName>Poe</relationshipName>
    <type>Lookup</type>
</CustomField>